# MERIT

./: .gitignore  Cargo.toml  README.md  app.py  config.template.json  main.rs  mod.rs  requirements.txt  supabase_client.py
OneDrive/Desktop/MES/: README.md  requirements.txt
OneDrive/Desktop/MES/.github/workflows/: setup.yml
OneDrive/Desktop/MES/app/: __init__.py  dashboard.py  email_sender.py  email_templates.py  image_manager.py  inventory_management.py  main.py  product_merger.py  setup_wizard.py  supabase_client.py
OneDrive/Desktop/MES/docs/: index.html
OneDrive/Desktop/MES/supabase/: schema.sql
OneDrive/Desktop/Strategy/: README.md  app.py  bot.py  config.json  engine.py  install.bat  install.sh  notifier.py  requirements.txt  setup.py
OneDrive/Desktop/Strategy/strategies/: heikin_ashi.py  ma_crossover.py
mnt/user-data/outputs/aegis/src/layer2/: mod.rs
mnt/user-data/outputs/aegis/src/layer3/: mod.rs
mnt/user-data/outputs/aegis/src/shadow/: mod.rs
mnt/user-data/outputs/aegis/src/types/: mod.rs
src/: lib.rs  main.rs
src/layer0/: mod.rs
src/layer1/: mod.rs
src/layer2/: mod.rs
src/shadow/: main.rs  mod.rs
src/types/: mod.rs
