[package]
name = "aegis"
version = "0.1.0"
edition = "2021"
authors = ["AEGIS Security System"]
description = "Adaptive Evolutionary Guard with Integrated Security - Novel blockchain consensus security"

[[bin]]
name = "aegis-node"
path = "src/main.rs"

[[bin]]
name = "aegis-shadow"
path = "src/shadow/main.rs"

[dependencies]
# Async runtime - fastest available
tokio = { version = "1.35", features = ["full"] }

# Fast hashing - BLAKE3 is faster than SHA256 by 10x
blake3 = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Concurrent data structures - lock-free hashmaps
dashmap = "5.5"

# Probabilistic data structures for bloom filter
bloomfilter = "1.0"

# Random number generation (cryptographically secure)
rand = { version = "0.8", features = ["std_rng"] }
rand_chacha = "0.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = "2.0"
sha2 = "0.10"
hmac = "0.12"

# Zero-knowledge proofs (lightweight)
# Using curve25519 for schnorr proofs
curve25519-dalek = "4.1"
merlin = "3.0"

# Statistics for CUSUM anomaly detection
statrs = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for transaction IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Metrics
prometheus = "0.13"

# Configuration
config = "0.13"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Priority queue for mempool
priority-queue = "1.3"

# Atomic operations
atomic = "0.6"

# Bit manipulation for LSH
bit-vec = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "layer0_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
